Fixed spacing bug in ubuntu chrome. Fixes #29

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -122,6 +122,7 @@
 }
 #home h4 a {
   color: #fff;
+  padding: 0 1px;
 }
 #home .span6 div div {
   padding: 0;
