--- a/public/less/home.less
+++ b/public/less/home.less
@@ -113,6 +113,7 @@
 		font-size: 12px;
 		a {
 			color: #fff;
+			padding: 0 1px;
 		}
 	}
 	.span6 div div {
